# JeanDujardin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build_debug.bat  build_release.bat  launch.bat  readme.md  setup.bat
JeanDujardin/: CMakeLists.txt  main.cpp
Sources/: CMakeLists.txt  main.cpp  pch.h
Sources/ConfigManager/: ConfigManager.cpp  ConfigManager.h
Sources/Events/: Deleguate.cpp  Deleguate.h
Sources/ExampleUses/: FirstExample.cpp  FirstExample.h  SecondExample.cpp  SecondExample.h
Sources/Geometries/: Plane.h  Triangle.h
Sources/Shader/: Shader.cpp  Shader.h
Sources/Widget/: Widget.h  WidgetManager.cpp  WidgetManager.h
Sources/Widget/Partials/: BooleanCheckbox.cpp  BooleanCheckbox.h  FloatSlider.cpp  FloatSlider.h
Sources/lib/Clock/: lsgClock.cpp  lsgClock.h
Sources/lib/Logger/: logger.cpp  logger.h
Sources/lib/Math/: KMath.h  MathMatrix.h  MathVector.h  Noise.h  Quaternion.h  Transform.h  Vertex.h
Sources/ressources/: triangle.frag  triangle.vert
ressources/: cube.frag  cube.vert  triangle.vert
